2008-10-21  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-picker-dialog.h: Add missing HildonTouchSelector
	header include.

2008-10-21  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-picker-button.c
	(hildon_picker_button_finalize):
	Free priv->done_button_text

	* src/hildon-time-button.c
	(hildon_time_button_set_time)
	* src/hildon-picker-button.c
	(hildon_picker_button_clicked)
	(hildon_picker_button_selector_selection_changed)
	(hildon_picker_button_set_selector)
	* src/hildon-date-button.c
	(hildon_date_button_set_date):
	Free strings returned by hildon_touch_selector_get_current_text()

	* src/hildon-button.c (hildon_button_construct_child):
	Fix leaks in priv->image and priv->label_box

	Fixes: NB#90535 (Memory leak in picker button)

2008-10-21  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-button.c: (hildon_button_get_property): Do not access
	private elements directly, use getters instead.

2008-10-20  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu-private.h
	* src/hildon-app-menu.c
	(hildon_app_menu_init, hildon_app_menu_set_parent_window):
	Store the menu's parent window.

	* src/hildon-stackable-window.c
	(hildon_stackable_window_toggle_menu)
	(hildon_stackable_window_finalize):
	Set the menu's parent window when the menu is shown, unset it when
	it is destroyed.

	* src/hildon-app-menu.c
	(hildon_app_menu_hide_idle, hildon_app_menu_key_press)
	(hildon_app_menu_class_init):
	Send unhandled keyboard accelerators to the parent window.

2008-10-20  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-stackable-window.c
	(hildon_stackable_window_finalize): Unref the menu, don't destroy it

2008-10-20  Claudio Saavedra  <csaavedra@igalia.com>

	* configure.ac: post release version bump

2008-10-20  Claudio Saavedra  <csaavedra@igalia.com>

	* NEWS: Updates
	* configure.ac: Bump version
	* debian/changelog: Updates
	* debian/rules: Set PKG_CONFIG_PATH to make docs build with
	gtk-doc 1.10.
